<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azzure_base"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_header"
        android:textSize="14sp"
        android:textColor="#292929"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="79dp"
        android:layout_height="67dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/foto_header"
        app:layout_constraintBottom_toTopOf="@+id/frame_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textHeader"
        app:layout_constraintTop_toTopOf="@+id/textHeader" />

    <RelativeLayout
        android:id="@+id/frame_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        
        android:background="@drawable/frame_4"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/mulai_lakukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="9sp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/mulaiLakukan" />

        <Button
            android:id="@+id/btnPindai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/mulai_lakukan"
            android:text="Pindai" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_6"
        android:clipToOutline="true"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_4"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/riwayat_det"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/riwayatDeteksi"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>